# bigATrade

./: .gitignore  README.md  pyproject.toml
.codex/skills/daily-review-wechat/: SKILL.md
docs/superpowers/plans/: 2026-06-05-recommend-akshare-output.md  2026-06-05-strong-stock-mvp.md
docs/superpowers/specs/: 2026-06-05-a-share-strong-stock-design.md
sql/mysql/: 001_create_recommendation_schema.sql  002_create_daily_quotes.sql  003_create_market_hotspots.sql  004_add_gain_from_recommend_pct.sql  005_backtest_results_daily_snapshots.sql
src/bigatrade/: __init__.py  __main__.py  cli.py
src/bigatrade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bigatrade/backtest/: __init__.py  engine.py
src/bigatrade/data/: __init__.py  akshare_provider.py  cache_provider.py  models.py
src/bigatrade/hotspot/: __init__.py  mysql_repository.py  service.py
src/bigatrade/output/: __init__.py  writers.py
src/bigatrade/recommend/: __init__.py  mysql_repository.py  service.py
src/bigatrade/results/: __init__.py  mysql_repository.py  service.py
tests/: test_cli.py
tests/backtest/: test_engine.py
tests/data/: test_akshare_provider.py  test_cache_provider.py  test_hotspot_provider.py
tests/hotspot/: test_hotspot_service.py
tests/output/: test_writers.py
tests/recommend/: test_recommend_mysql_repository.py  test_service.py
tests/results/: test_result_mysql_repository.py  test_result_service.py
tests/strategy/: test_indicators.py  test_strong_stock.py  test_trade_plan.py
tests/tracking/: test_mysql_repository.py  test_performance_tracker.py
(+9 files in other folders)
