[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigatrade"
version = "0.1.0"
description = "A股一周强势股捕捉与回测工具"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.16.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
